# rwa-studio

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  LICENSE  PROJECT_DELIVERY.md  README.md  RWA_STUDIO_ANALYSIS_REPORT.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  publish.sh
backend/: .coverage  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/scripts/: generate_secrets.py
backend/src/: config.py  main.py  seed_templates.py
backend/src/middleware/: __init__.py  auth.py  error_handler.py  rate_limit.py  security.py  validation.py
backend/src/models/: kyc.py  referral.py  subscription.py  token.py  user.py
backend/src/routes/: analytics_export.py  assets.py  auth.py  badge.py  billing.py  documents.py  kyc.py  transfer_agent.py  user.py
backend/src/services/: __init__.py
backend/src/services/email/: __init__.py  sendgrid.py  service.py  templates.py
backend/src/services/kyc/: __init__.py  base.py  onfido.py
backend/src/services/payments/: __init__.py  service.py  stripe.py
backend/src/services/storage/: __init__.py  ipfs.py  service.py
backend/src/tasks/: __init__.py  celery_app.py  email_tasks.py  kyc_tasks.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_middleware.py  test_seed_templates.py  test_services_integration.py  test_transfer_agent.py
docs/: DEVELOPER_GUIDE.md  PRODUCTION_SECURITY_CHECKLIST.md  SECURITY_AUDIT_BRIEF.md  STYLE_GUIDE.md  api-reference.md  user-guide.md
e2e/: README.md  eslint.config.js  package.json  (+2 more)
(+93 files in other folders)
